# libcec-daemon

./: CMakeLists.txt  README.md  bootstrap  build_deb.sh  libcec-daemon.rules
cmake/: FindCec.cmake  FindLog4cplus.cmake  config.h.in
etc/: libcec-daemon.conf  libcec-daemon.rules  libcec-daemon.service  libcec.service
src/: accumulator.hpp  hdmi.cpp  key_defs.h  libcec.cpp  libcec.h  main.cpp  main.h  maps.cpp  maps.h  uinput.cpp  uinput.h
